[gd_scene load_steps=5 format=3 uid="uid://b4de0gcgvod6"]

[ext_resource type="PackedScene" uid="uid://hbegjmtr17i4" path="res://assets/models/lopwoly_rigged_hand_in_psxps1_style.glb" id="1_4flbx"]
[ext_resource type="Script" uid="uid://cq5y2qicu1lad" path="res://scripts/player.gd" id="1_i3pqv"]
[ext_resource type="Script" uid="uid://yop72jnt851d" path="res://scripts/grabber.gd" id="1_onrkg"]

[sub_resource type="SphereShape3D" id="SphereShape3D_onrkg"]
radius = 0.1

[node name="XROrigin3D" type="XROrigin3D"]
transform = Transform3D(3.5, 0, 0, 0, 3.5, 0, 0, 0, 3.5, 0, 0, 0)
script = ExtResource("1_i3pqv")

[node name="XRCamera3D" type="XRCamera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="LeftHand" type="XRController3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, -0.5)
tracker = &"left_hand"
script = ExtResource("1_onrkg")

[node name="GrabArea" type="Area3D" parent="LeftHand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.05)

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftHand/GrabArea"]
shape = SubResource("SphereShape3D_onrkg")

[node name="HandOffset" type="Node3D" parent="LeftHand"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0.05)

[node name="HandModel" parent="LeftHand/HandOffset" instance=ExtResource("1_4flbx")]
transform = Transform3D(-0.1, 0, 8.74228e-09, 0, 0.1, 0, -8.74228e-09, 0, -0.1, 0, -0.15, 0)

[node name="RightHand" type="XRController3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, -0.5)
tracker = &"right_hand"
script = ExtResource("1_onrkg")

[node name="GrabArea" type="Area3D" parent="RightHand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.05)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightHand/GrabArea"]
shape = SubResource("SphereShape3D_onrkg")

[node name="HandOffset" type="Node3D" parent="RightHand"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0.05)

[node name="HandModel" parent="RightHand/HandOffset" instance=ExtResource("1_4flbx")]
transform = Transform3D(0.1, 8.74228e-09, 0, -8.74228e-09, 0.1, 0, 0, 0, -0.1, 0, -0.15, 0)

[connection signal="button_pressed" from="LeftHand" to="." method="_on_left_button_pressed"]
[connection signal="input_float_changed" from="LeftHand" to="LeftHand" method="_on_input_float_changed"]
[connection signal="input_vector2_changed" from="LeftHand" to="." method="_on_input_vector_2_changed"]
[connection signal="button_pressed" from="RightHand" to="." method="_on_right_button_pressed"]
[connection signal="input_float_changed" from="RightHand" to="RightHand" method="_on_input_float_changed"]
